--- a/45_setTimeout.html
+++ b/45_setTimeout.html
@@ -28,7 +28,7 @@
 
     const head = document.querySelector('#heading')
     const headFun = function () {
-        head.innerHTML = '<h1>we are Reading JavaScript from Internet Best YouTube Chanel Chai aur Code</h1>'
+        head.innerHTML = '<h1>we are Reading JavaScript</h1>'
     }
 
     setTimeout(headFun, 5000)
