--- a/50_api_request.html
+++ b/50_api_request.html
@@ -91,7 +91,7 @@
 <script>
 
     console.log('Hi i am javascript')
-    const apiurl = 'https://api.github.com/users/hiteshchoudhary'
+    const apiurl = 'https://api.github.com/users/sujitsoftengg'
     const xhr = new XMLHttpRequest()
     xhr.open('get', apiurl)
     xhr.onreadystatechange = function () {
@@ -114,13 +114,6 @@
     }
     xhr.send()
     // console.log(xhr.readyState)
-
-/**************************************************************************************************/
-
-let image_container = document.querySelector('.image-container')
-let information_container = document.querySelector('.information-container')
-let image = document.createElement('img')
-
 </script>
 </body>
-</html> 
+</html>
