--- a/25_Revision/16_dom/01_first.html
+++ b/25_Revision/16_dom/01_first.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document Object Model</title>
     <link rel="stylesheet" href="01_first.css">
 </head>
 <body>
@@ -20,7 +20,6 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab eligendi aliquid, at repudiandae aliquam neque molestias enim nisi corporis nam deserunt placeat optio id omnis. Mollitia et dicta facilis corporis.</p>
         <button class="button" id="third-buton">Click Me</button>
 
-        
     </div>
 </body>
 <script src="01_first.js"></script>
