--- a/25_Revision/16_dom/02_second.html
+++ b/25_Revision/16_dom/02_second.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DOM</title>
+    <link rel="stylesheet" href="02_second.css">
 </head>
-<body>
-    
+<body class="body" id="body">
+    <h3 class="title" id="title">Document Object Model</h3>
+    <div class="parents">
+        <div class="day">Monday</div>
+        <div class="day">Tuesday</div>
+        <div class="day">Wednesday</div>
+        <div class="day">Thursday</div>
+        <div class="day">Friday</div>
+        <div class="day">Saturday</div>
+        <div class="day">Sunday</div>
+    </div>
 </body>
+<script src="02_second.js"></script>
 </html>
