--- a/25_Revision/16_dom/03_third.html
+++ b/25_Revision/16_dom/03_third.html
@@ -4,7 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="03_third.css">
+    <!-- <link rel="stylesheet" href="03_third.css"> -->
+
+<style>
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #f0f0f0;
+}
+
+.span {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+    margin: 10px 0;
+}
+
+</style>
+
 </head>
 <body>
     <div class="container" id="container">
@@ -29,5 +57,21 @@
         
     </div>
 </body>
-<script src="03_third.js"></script>
+<script>
+
+let container = document.querySelector('.container');
+let firstChild = container.firstElementChild
+let lastChild = container.lastElementChild
+let middleChild = container.children[1]
+
+
+console.log(firstChild) 
+console.log(lastChild) 
+console.log(middleChild) 
+
+firstChild.style.backgroundColor = 'red'
+lastChild.style.backgroundColor = 'blue'
+middleChild.style.backgroundColor = 'green'
+
+</script>
 </html>
