--- a/25_Revision/16_dom/domprojects/03_project.html
+++ b/25_Revision/16_dom/domprojects/03_project.html
@@ -21,11 +21,11 @@
 </style>
 
 <body>
-    <div>
-
+    <div id="clock-container">
+        
     </div>
 </body>
 <script>
-    
+
 </script>
 </html>
