--- a/25_Revision/16_dom/domprojects/04_project.html
+++ b/25_Revision/16_dom/domprojects/04_project.html
@@ -142,8 +142,9 @@ function validateGuess(guess) {
     } else {
         preGuess.push(guess);
         result.innerHTML += `${guess}, `;
+        lastResult.innerHTML = `${5 - numberOfGuesses} guesses remaining`;
         if (numberOfGuesses === 5) {
-            displayGuess(`!!!GAME OVER!!! Because you have used all your guesses`);
+            displayMessage(`!!!GAME OVER!!! Because you have used all your guesses`);
             endGame();
         } else {
             displayGuess(guess);
@@ -167,7 +168,7 @@ function checkGuess(guess){
 function displayGuess(guess){
     userInput.value = '';
     // numberOfGuesses++;
-    lastResult.innerHTML = `${5 - numberOfGuesses} guesses remaining`;
+    // lastResult.innerHTML = `${5 - numberOfGuesses} guesses remaining`;
 }
 
 function displayMessage(message){
@@ -178,11 +179,23 @@ function displayMessage(message){
 function endGame(){
     userInput.disabled = true;
     submitButton.disabled = true;
-    alert(`Game Over! Refresh the page to start a new game`);
+    // displayMessage(`Game Over! Refresh the page to start a new game`);
+    endGame(true);
 }
 
-function newGame(){
-    //
+function resetGame(){
+
+}
+
+function startGame(endGame){
+    if (endGame){
+        const startButton = document.createElement('button');
+        startButton.textContent = 'Start new game';
+        startOver.appendChild(startButton);
+        startButton.addEventListener('click', resetGame);
+    }
+
+
 }
 
 
