--- a/25_Revision/16_dom/03_third.html
+++ b/25_Revision/16_dom/03_third.html
@@ -57,21 +57,5 @@ body {
         
     </div>
 </body>
-<script>
-
-let container = document.querySelector('.container');
-let firstChild = container.firstElementChild
-let lastChild = container.lastElementChild
-let middleChild = container.children[1]
-
-
-console.log(firstChild) 
-console.log(lastChild) 
-console.log(middleChild) 
-
-firstChild.style.backgroundColor = 'red'
-lastChild.style.backgroundColor = 'blue'
-middleChild.style.backgroundColor = 'green'
-
-</script>
+<script src="03_third.js"></script>
 </html>
