--- a/25_Revision/16_dom/07_eventListener.html
+++ b/25_Revision/16_dom/07_eventListener.html
@@ -1,6 +1,9 @@
 
 <!-- eventListener in html inline tag -->
 
+<!-- onclick="alert('Start Button')" -->
+<!-- onclick="alert('Stop Button')" -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,10 +18,5 @@
         <button id="stop" onclick="alert('Stop Button')">Stop</button>
     </div>
 </body>
-<script>
-    let stopButton = document.querySelector('#stop')
-    let startButton = document.querySelector('#start')
-
-
-</script>
+<script src="07_eventListener.js"></script>
 </html>
