--- a/25_Revision/16_dom/08_eventListener.html
+++ b/25_Revision/16_dom/08_eventListener.html
@@ -12,18 +12,5 @@
         <button id="stop">Stop</button>
     </div>
 </body>
-<script>
-    let startButton = document.querySelector('#start')
-    let stopButton = document.querySelector('#stop')
-
-    startButton.onclick = function () {
-        alert('Start Button')
-    };
-
-    stopButton.onclick = function () {
-        alert('Stop Button')
-    };
-
-    
-</script>
+<script src="08_eventListener.js"></script>
 </html>
