--- a/25_Revision/16_dom/09_eventListener.html
+++ b/25_Revision/16_dom/09_eventListener.html
@@ -13,18 +13,6 @@
     </div>
 </body>
 
-<script>
-    let startButton = document.querySelector('#start')
-    let stopButton = document.querySelector('#stop')
-
-    startButton.addEventListener('click', function () {
-        alert('Start Button')
-    });
-
-    stopButton.addEventListener('click', function () {
-        alert('Stop Button')
-    });
-    
-</script>
+<script src="09_eventListener.js"></script>
 
 </html>
