--- a/25_Revision/16_dom/11_eventProject.html
+++ b/25_Revision/16_dom/11_eventProject.html
@@ -103,21 +103,7 @@
     </div>
 </body>
 
-<script>
-    console.log("Hi i am from script tag");
-    document.querySelector("#images-list").addEventListener
-    ("click", function(e){
-        // console.log(e);
-    let hideElement = e.target.parentNode;
-    let hiddenElement = hideElement
-
-        if(e.target.tagName === "IMG"){
-            // hideElement.remove();
-            hideElement.parentNode.removeChild(hiddenElement);
-        }
-
-    }, false);
-
+<script src="11_eventProject.js"></script>
 </script>
 
 </html>
