--- a/25_Revision/16_dom/04_fourth.html
+++ b/25_Revision/16_dom/04_fourth.html
@@ -98,21 +98,5 @@
         </div>
     </div>
 </body>
-<script>
-
-let childFirst = document.querySelector('#sub-container01');
-// let childSecond = document.querySelector('#sub-container02');
-let childSecond = childFirst.nextElementSibling;
-let parent = childFirst.parentElement;
-
-console.log(parent); //
-console.log(parent.childNodes); // Get all child elements of the parent element
-
-parent.style.backgroundColor = '#0f0f0f0f'; // Change the background color of the parent element
-childFirst.style.backgroundColor = 'green'; // Change the background color of the first child element
-childSecond.style.backgroundColor = 'green'; // Change the background color of the first child element
-
-
-
-</script>
+<script src="04_fourth.js"></script>
 </html>
