--- a/25_Revision/16_dom/13_setInterval.html
+++ b/25_Revision/16_dom/13_setInterval.html
@@ -13,31 +13,7 @@
     </div>
 </body>
 
-<script>
-    let startButton = document.querySelector('#start')
-    let stopButton = document.querySelector('#stop')
-
-    let datePrintFunction = function(){
-        let date = new Date()
-        let dateAndTime = date.toLocaleString()
-        console.log(dateAndTime)
-    }
-
-    let str = "Current Time"
-
-    let interval;
-
-    startButton.addEventListener('click', function() {
-        console.log('Start Button Clicked')
-        interval = setInterval(datePrintFunction, 2000, str)
-    })
-
-    stopButton.addEventListener('click', function() {
-        console.log('Stop Button Clicked')
-        clearInterval(interval)
-    })
-
-
+<script src="13_setInterval.js"></script>
 </script>
 
 </html>
