--- a/26_miniproject/index.html
+++ b/26_miniproject/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BUDDHA INSTITUTE OF TECHNOLOGY</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 </head>
 <body>
   <div class="container">
@@ -14,7 +15,16 @@
       <input type="text" id="studentName" placeholder="Student Name" required>
       <input type="text" id="fatherName" placeholder="Father's Name" required>
       <input type="text" id="session" placeholder="Session (e.g. 2020-23)" required>
-      <input type="text" id="branch" placeholder="Branch (e.g. Electrical Engineering)" required>
+
+        <select name="branch" id="branch">
+            <option value="Civil Engineering">Civil Engineering</option>
+            <option value="Electrical Engineering">Electrical Engineering</option>
+            <option value="Computer Science & Engineering">Computer Science & Engineering</option>
+            <option value="Mechanical Engineering">Mechanical Engineering</option>
+            <option value="Electronics Engineering">Electronics Engineering</option>
+        </select>
+
+      <!-- <input type="text" id="branch" placeholder="Branch (e.g. Electrical Engineering)" required> -->
       <input type="text" id="rollNo" placeholder="Roll Number" required>
       <input type="text" id="semester" placeholder="Promoted Semester (e.g. 6th)" required>
       <input type="text" id="fee" placeholder="Fee Payable (e.g. 57100/-)" required>
@@ -23,7 +33,7 @@
     </form>
 
     <div id="certificate">
-      <p><strong>Ref. No.:-</strong> <span id="refNo"></span> <strong id="curdate"></strong> <span id="certDate"></span></p>
+      <span id="refdate"><p id="refno"><strong>Ref. No.:-</strong> <span id="refNo"></span></p> <p id="date"></p><strong>Date:</strong> <span id="certDate"></span></p></span>
       <h2 class="text-center">TO WHOM IT MAY CONCERN</h2>
 
       <p>Certified that <strong><span id="certStudent"></span></strong> S/o <strong><span id="certFather"></span></strong> had been admitted during the session <strong><span id="certSession"></span></strong> in the branch of <strong><span id="certBranch"></span></strong> bearing Roll No – <strong><span id="certRoll"></span></strong>. He is a bonafide student of this institution. He is promoted to <strong><span id="certSemester"></span></strong> Semester. The 3rd Year dues payable fee will be <strong><span id="certFee"></span></strong>.</p>
@@ -42,6 +52,14 @@
     </div>
   </div>
 
+  <div id="actions" style="display: none; text-align: center; margin-top: 20px;">
+    <button onclick="window.print()">Print Certificate</button>
+    <button id="downloadbtn">Download PDF</button>
+  </div>
+
   <script src="script.js"></script>
+  <script>
+        
+  </script>
 </body>
 </html>
