--- a/26_miniproject/project03/index.html
+++ b/26_miniproject/project03/index.html
@@ -130,7 +130,7 @@
         </div>
 
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
